@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020140121"
-#define public MagickPackageReleaseDate "snapshot-20140121"
+#define public MagickPackageVersionAddendum ".020140131"
+#define public MagickPackageReleaseDate "snapshot-20140131"
